Add virksomhetsnummer as request param when NL fetches oppfølgingsplaner (#313)